--- a/ROLTA-DYNO/Reports.ui
+++ b/ROLTA-DYNO/Reports.ui
@@ -53,7 +53,7 @@
 </string>
     </property>
     <property name="text">
-     <string>Specimen ID :</string>
+     <string>Test ID :</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -63,7 +63,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>260</y>
+      <y>310</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -93,7 +93,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>460</y>
+      <y>510</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -123,7 +123,7 @@
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>260</y>
+      <y>310</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -159,7 +159,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>230</y>
+      <y>270</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -195,7 +195,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>220</y>
+      <y>270</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -299,7 +299,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>230</y>
+      <y>270</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -329,7 +329,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>150</y>
+      <y>190</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -364,7 +364,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>340</y>
+      <y>390</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -394,7 +394,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>110</y>
+      <y>150</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -460,7 +460,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>350</y>
+      <y>390</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -490,7 +490,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>460</y>
+      <y>510</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -525,7 +525,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>350</y>
+      <y>390</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -560,7 +560,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>270</y>
+      <y>310</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -590,7 +590,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>140</y>
+      <y>190</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -620,7 +620,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>180</y>
+      <y>230</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -650,7 +650,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>300</y>
+      <y>350</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -680,7 +680,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>420</y>
+      <y>470</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -710,7 +710,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>420</y>
+      <y>470</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -745,7 +745,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>310</y>
+      <y>350</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -810,7 +810,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>180</y>
+      <y>230</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -846,7 +846,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>190</y>
+      <y>230</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -876,7 +876,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>340</y>
+      <y>390</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -912,7 +912,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>110</y>
+      <y>150</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -1014,7 +1014,7 @@ padding-bottom:5px;
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>150</y>
+      <y>190</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -1043,8 +1043,8 @@ padding-bottom:5px;
    <widget class="QLabel" name="label_71">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>500</y>
+      <x>420</x>
+      <y>110</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -1074,7 +1074,7 @@ padding-bottom:5px;
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>380</y>
+      <y>430</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -1104,9 +1104,9 @@ padding-bottom:5px;
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>390</y>
+      <y>430</y>
       <width>181</width>
-      <height>71</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -1137,7 +1137,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>140</y>
+      <y>190</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -1173,7 +1173,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>300</y>
+      <y>350</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -1388,7 +1388,7 @@ padding-bottom:5px;
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>190</y>
+      <y>230</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -1424,7 +1424,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>220</y>
+      <y>270</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -1458,8 +1458,8 @@ border: 1px solid red;
    <widget class="QLineEdit" name="lineEdit_22">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>500</y>
+      <x>580</x>
+      <y>110</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -1494,7 +1494,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>380</y>
+      <y>430</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -1559,7 +1559,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>310</y>
+      <y>350</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -1589,7 +1589,7 @@ border: 1px solid red;
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>390</y>
+      <y>430</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -1678,7 +1678,7 @@ color: rgb(255, 0, 0);
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>270</y>
+      <y>310</y>
       <width>181</width>
       <height>28</height>
      </rect>
@@ -2408,10 +2408,10 @@ background-color: rgb(208, 208, 208);}</string>
    <widget class="QLabel" name="label_59">
     <property name="geometry">
      <rect>
-      <x>910</x>
-      <y>40</y>
+      <x>210</x>
+      <y>150</y>
       <width>61</width>
-      <height>51</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -2423,7 +2423,7 @@ background-color: rgb(208, 208, 208);}</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 255);
+     <string notr="true">color: rgb(0, 0, 0);
 
 
 </string>
@@ -2460,6 +2460,36 @@ background-color: rgb(208, 208, 208);}</string>
     </property>
     <property name="text">
      <string>Test ID :</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_61">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>150</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>11</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);
+
+
+</string>
+    </property>
+    <property name="text">
+     <string>Specimen ID :</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -2525,6 +2555,7 @@ background-color: rgb(208, 208, 208);}</string>
    <zorder>line_10</zorder>
    <zorder>label_59</zorder>
    <zorder>label_53</zorder>
+   <zorder>label_61</zorder>
   </widget>
  </widget>
  <resources/>
