--- a/ROLTA-DYNO/Specimes_01.ui
+++ b/ROLTA-DYNO/Specimes_01.ui
@@ -2335,6 +2335,66 @@ border: 1px solid red;
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="label_61">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>50</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>11</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 0);
+
+
+</string>
+    </property>
+    <property name="text">
+     <string>Specimen ID :</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_54">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>40</y>
+      <width>71</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>15</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(0, 0, 255);
+
+
+</string>
+    </property>
+    <property name="text">
+     <string>001</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
    <zorder>label_52</zorder>
    <zorder>label_63</zorder>
    <zorder>line_7</zorder>
@@ -2391,6 +2451,8 @@ border: 1px solid red;
    <zorder>line_4</zorder>
    <zorder>line_10</zorder>
    <zorder>line_11</zorder>
+   <zorder>label_61</zorder>
+   <zorder>label_54</zorder>
   </widget>
  </widget>
  <resources/>
